[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/main/main.gd" type="Script" id=1]
[ext_resource path="res://images/background/diffuse.jpg" type="Texture" id=2]
[ext_resource path="res://sounds/playcard.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/draw.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/shuffle.wav" type="AudioStream" id=5]

[node name="Main" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="." index="0"]

z_index = -100
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Diffuse" type="Sprite" parent="Background" index="0"]

modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
light_mask = 0
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 4096, 2048 )
_sections_unfolded = [ "Offset", "Region", "Transform", "Visibility" ]

[node name="Camera" type="Camera2D" parent="." index="1"]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="Cards" type="Node2D" parent="." index="2"]

[node name="SoundPlay" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Sound"

[node name="SoundDraw" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 4 )
volume_db = -4.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Sound"

[node name="SoundShuffle" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 5 )
volume_db = -4.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Sound"


